Fixed GApps

--- a/style.css
+++ b/style.css
@@ -46,7 +46,6 @@ a:active {
 .apps {
  width: 30px;
  height: 30px;
- background-image: url('//ssl.gstatic.com/gb/images/i2_2ec824b0.png');
  background-position: -132px -38px;
  background-size: 528px 68px;
  opacity: .55;
